--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
-  "name": "solidity_project",
+  "name": "dapptutorial2022",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Tutorial to create an Ethereum DApp",
+  "main": "truffle-config.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "lite-server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.2"
+    "@openzeppelin/contracts": "^4.9.2",
+    "@openzeppelin/merkle-tree": "^1.0.5",
+    "@truffle/contract": "^4.5.7",
+    "buffer": "^6.0.3",
+    "keccak256": "^1.0.6",
+    "lite-server": "^2.6.1",
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.10.0"
   }
 }
